--- a/css/index.css
+++ b/css/index.css
@@ -75,12 +75,12 @@ a:hover {color: #9aa4bd;}
 	background-image: url("../src/splash+contexts/stars_wallpaper.svg");
 	background-size: contain;
 	background-repeat: repeat-y;
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 	opacity: 1;
 	display: flex;
 	justify-content: center;
-    align-items: center;
+  align-items: center;
 	position: fixed;
 	z-index: 20;
 
@@ -96,49 +96,10 @@ a:hover {color: #9aa4bd;}
 #scroll_tracker_wrapper {width: 100vw; background: red; position: fixed; bottom: 0; left: 0; height: 10px; z-index: 10000;}
 #scroll_tracker { background: green; width: 0%; }
 
-.login {
-	 width: 100%; 
-	 height: 100%;
-	 position: fixed;
-	 top: 0;
-	 display: flex;
-	justify-content: center;
-	align-items: center;
-	
-	
-}
-
-#profile_wrapper {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 100%; 
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
-}
-
-.profile {
-	width: 0%;
-	max-width: 300px;
-	position: absolute;
-	padding-top: 25px;
-	opacity: 1;
-	z-index: 10;
-}
-
-.profile_description {
-	width: 50%;
-	opacity:1;
-	padding-top: 80px;
-	
-
-}
-
-
-
-
+.login {width: 100%; height: 100%; position: fixed; top: 0; display: flex; justify-content: center;	align-items: center;}
+#profile_wrapper {position: absolute; bottom: 0;	width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;}
+.profile {width: 0%; max-width: 300px; position: absolute; padding-top: 25px; opacity: 1; z-index: 10;}
+.profile_description {width: 50%; opacity:1; padding-top: 80px;}
 
 #splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; height: 100%; width: 100%; content: contain; }
 .splash_page_wrapper {display: flex; justify-content: center; align-items: center; max-height: 80%;}
@@ -177,43 +138,64 @@ a:hover {color: #9aa4bd;}
 .tooltip .tooltiptext::after {content: ""; position: absolute; top: 100%; left: 50%;}
 .tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
 
-button {background-color: #00000000; border: none; outline: none;}
+button {background: none; border: none; outline: none;}
 button:hover {cursor: pointer;}
 
+.desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-color: #47578a; }
+#desktop_window_wrapper {width: 100%;  height: calc(100% - 190px); position: fixed; z-index: 0; contain: content; top: 70px;  display: flex; justify-content: center; align-items: center; content: contain; }
+.desktop button {background: none; border: none; outline: none;}
 
-.desktop {display: flex; justify-content: center; align-items: center; }
-#desktopDIV{width: 100%; height: calc(100% - 250px); position: fixed; content: contain; top: 100px; z-index: 10000;}
-#desktop_wrapper {height: 100%; top: 50px; width: 100%; position: fixed; background-image: url("../src/desktop_items/wallpaper.svg");  background-size: cover; background-color: #47578a; background-repeat: no-repeat; top: 50px;  width: 100%; height: 100%; position: fixed; z-index: 0;};
+.desktop_toolbar {width: 100%; background-color: #2c2c2c; display: inline-block; height: 50px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; }
+#desktop_toolbar_left { float: left; width: 95%; padding-left: 20px; }
+#desktop_toolbar_right {width: 175px; float: right;  }
+#desktop_toolbar_right img {height: 30%; padding-right: 5px; }
 
-.desktop_toolbar { width: 100%; background-color: #2c2c2c; height: 50px; color: white; display: inline-block; overflow: hidden; position: fixed;}
-.desktop_toolbar p {display: inline-block; padding-left: 15px;}
-#desktop_toolbar_left { float: left; width: 65%; padding-left: 20px; }
-#desktop_toolbar_right {float:right; padding-right: 20px; }
-#desktop_toolbar_right img {height: 15px; padding-right: 5px; }
-.desktop_toolbar button {color: white; font-size: 14px; } 
-.desktop_toolbar a {color: white;}
-
-.desktop_container {position: fixed; right: 10px; top: 15%; bottom: 15%; max-width: 120px; }
-.desktop_container img {width: 80%;  min-width: 70px; max-width: 110px; padding-top: 10%; }
-.desktop_container img:hover {transform: rotate(5deg);}
-.desktop_icons button{border: none; box-shadow: none; outline: none; }
+.dock_container {position: fixed; width: 100%; bottom: 0; z-index: 2; display: flex; justify-content: center;} 
+.dock {bottom: 0; height: 100px; border-radius: 5px; width: 500px; background-color: #2e345b; display: flex; justify-content: center; align-items: center; z-index: 200;}
+.dock img {height: 100px; padding: 15px; opacity: 1;}
+.dock button:hover {transform: rotate(5deg); cursor: pointer;}
 
 
-.window {position: fixed; bottom: 200px; background-color: #9aa4bd; border:#3A4172 2px solid; box-shadow: 15px 15px 50px black; border-radius: 4px 4px 4px 4px;   }
+.tooltip {position: relative; display: inline-block;}
+.tooltip .tooltiptext {visibility: hidden; width: 100%; background-color: #c7ccde; color: #000; text-align: center; padding: 5px 0; border-radius: 6px; position: absolute; z-index: 1; bottom: 100%; opacity: 0; transition: opacity 0.3s;}
+.tooltip .tooltiptext::after {content: " "; position: absolute; top: 100%; left: 50%; margin-left: -10px; border: 7px solid; border-width: 9px; border-style: solid; border-color: #c7ccde transparent transparent transparent;}
+.tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
+
+.desktop_icon_container {right: 10px; position: fixed; top: 150px; max-width: 110px; }
+.desktop_icon_container img {width: 100%; max-height: 110px; min-width: 110px;  padding-bottom: 10%; }
+.desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
+
+#notification {right: 0px; z-index: 20; width: 500px; position: fixed; top: 50px; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
+#notification:hover {cursor: pointer;}
+
+.window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; height: 100%; background: #c6cadf;  box-shadow: 5px 5px 5px #2c2c2c; position: fixed; contain: content;}
 .window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; border-bottom: #3A4172 1px solid; text-align: center; position: sticky; z-index: 20;}
-.window_closebar p {display: inline-block;  position: relative;bottom: 8px;}
-.close_btn {top: 5px; height: 20px; left: 10px; float: left; position: absolute;}
+.window_closebar p {display: inline-block; position: relative; bottom: 9px; color: #c6cadf;}
+.close_btn {top: 5px; height: 20px; left: 8px; float: left; position: fixed; }
+.window_closebar img:hover {cursor: pointer; transform: scale(1.2)}
 
-#contact_window {position: fixed; height: 600px; max-width: 400px; contain: content; overflow: hidden;}
-#contact_window_content {top: 40%; height: 100%; }
+
+.blu {border-left: 10px solid #3a4172; padding-left: 20px; margin-right: 20px;}
+
+#about_window {width: 80%; max-height: 800px; max-width: 600px; background: #ececec; background-image: url('../src/desktop_items/grid_simple.svg'); }
+#about_wrapper {justify-content: center; align-items: center; contain: content; width: 100%; height: calc(100% - 30px);}
+#about_content {height: 95%; margin-top: 2.5%; display: flex; scroll-behavior: smooth; flex-wrap: nowrap; overflow-x: auto; width: 100%;}
+.slide {left: 0; padding: 50px 50px 0px 50px; flex: 0 0 auto;  display: inline-block; height: 100%; width: 100%; margin-right: 20px;  max-width: 610px; contain: content; }
+#about_content::-webkit-scrollbar {display: none;}
+.about_nav {width: 85%; height: 20px; bottom: 2%; position: fixed; display: flex; justify-content: center; align-items: center;  contain: content;}
+#about_window h1 {font-size: 24px; }
+
+.about_nav h6 {text-transform: uppercase; font-size: 12px; font-weight: 400; color: gray;}
+.about_nav button:hover {transform: scale(1.5); cursor: pointer;}
+.about_btn_left {float: left; position: fixed; left: 10px;}
+.about_btn_right {float: right;  position: fixed; right: 10px; }
+
+#contact_window {height: 600px; max-width: 400px; contain: content; overflow: hidden;}
 #contact_window_content p {padding-left: 5%; padding-right: 5%;}
-#contact_window_sendbar button {bottom: 20px; position: absolute; background: #49588b; width: 100px; height: 30px; float: right; right: 20px;}
+#contact_window_sendbar button {bottom: 20px;  position: absolute; background: #49588b; width: 100px; height: 30px; float: right; right: 20px;}
 #contact_window_content img {height: 80px; padding-left: 20px; }
 #contact_window_content img:hover {transform: scale(1.1); cursor: alias;}
-.mail_button {background: #2f335c; font-family: 'Poppins', sans-serif; padding: 10px; margin-left: 55%;}
-
-#notification {right: 0px; z-index: 20; width: 500px; top: 53px; position: fixed; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
-#notification:hover {cursor: pointer;}
+.mail_button {background: #2f335c; font-family: 'Poppins', sans-serif; padding: 10px; bottom: 20px; position: fixed; margin-left: 55%;}
 
 #terminal_window {height: 400px; width: 80vw; max-width: 650px; background-color: #3A4172; top: 30%; }
 .done {display: block !important;}
@@ -221,40 +203,38 @@ button:hover {cursor: pointer;}
 #terminal_text p {display: none; font-family:'Courier New', Courier, monospace; color: white; padding-left: 2%;}
 .line {white-space: nowrap; overflow: hidden; transform: translateY(-50%); animation: typing 2.5s steps(30, end); display: block !important;}
 
-#finder_window {width: 95%; height: 75%;  max-width: 1000px; contain: content;  }
-.finder_content { width: 100%; height: calc(100% - 120px); background: #c6cADF; display: flex; justify-content: center; align-items: center;}
-.finder_content_nav{background: #707BA5; border: 1px solid #2f335c; width: 100%; height: 100px; position: absolute; bottom: 0; display: flex;  align-items: center; overflow-x: scroll;}
-.slide_container { width: 90%; height: 95%; text-align: center; contain: content;  }
-.slide_caption {bottom: 0; position: absolute; width: 100%; background: #c6cADF;}
-.mySlides {vertical-align: middle; }
-.mySlides img { height: 100%; }
-.finder_content_nav img {height: 80px; border: 1px solid #2f335c; box-shadow: 2px 2px 2px black; background: none; }
-.finder_content_nav button {padding-right: 20px; outline: none; border: none; background: none;}
-.finder_content_nav button:hover {transform: scale(1.1); cursor: pointer; } 
-.finder_content_nav button:focus {transform: scale(1.1); cursor: pointer; }  
+#finder_window {max-height: 80%; max-width: 80%;}
+#finder_window .window_closebar {border-bottom: none;}
+#finder_filter {box-shadow: 0px 5px 5px gray; width: 100%; height: 35px; background: #4c5987; border-bottom: 1px solid #2f335c; display: flex; justify-content: center; align-items: center;}
+#finder_filter button {background:#384272; border: none; border-right: 1px solid #2c2c2c;  color: #c7ccde;  padding: 5px 20px;}
+#finder_filter button:focus {background: #2f335c; color: white;}
+.slide_container {contain: content; content: contain; height: calc(100% - 250px); margin: 50px;}
+.slide_container img {width: 100%; animation: fade-in .75s cubic-bezier(.39,.575,.565,1.000) both;}
+.finder_carousel{background: #707BA5; box-shadow: 0px -4px 7px gray; border-top: 1px solid #2f335c; width: 100%; height: 100px; position: absolute; bottom: 0; display: flex;  align-items: center; overflow-y: hidden; overflow-x: scroll;}
+.finder_carousel img {height: 80px; border: 1px solid #2f335c; box-shadow: 2px 2px 2px black; background: none; }
+.finder_carousel button {padding: 20px; outline: none; border: none; cursor: pointer; }
+/* .active_carousel_button {transform: scale(1.3);}   */
+.slideshow_btn_left {position: fixed; left: 0; bottom: 50%; height: 105px; z-index: 20; font-size: 72px; cursor: pointer;}
+.slideshow_btn_right {position: fixed; right: 0; bottom: 50%; height: 105px; font-size: 72px; cursor: pointer;}
+.slideshow_btn_right:hover {transform: scale(1.1); color: #707Ba5;}
+.slideshow_btn_left:hover {transform: scale(1.1); color: #707Ba5;}
+
+.slide_caption {bottom: 0; position: fixed; text-align: center; background: #c6cADF; width: 100%; }
 .slide_caption button {background: #2f335c; color: white; border: none; padding: 10px; }
+.slide_caption button:hover {transform: scale(1.1); cursor: alias;}
 
-.slideshow_nav_btn { height: 80%; position: fixed; padding: 0px 1% 0px 1%; top: 0; font-size: 48px; color: #2f335c;}
-.slideshow_nav_btn:hover { transform: scale(1.3); cursor: pointer;}
 
-.hide { display: none;}
-
-.sticky {width: 300px; height: 300px; background: #9aa4bd;  z-index: 20; text-align: center;  }
-
-/* #testimonial_wrapper {width: 100%; height: 100%; } */
-#testimonial_window1 {top: 45%; left: 50%; background-image: url("../src/desktop_items/quotes1.svg"); background-size: 100% 75%; background-position: 0% 60%; background-repeat: no-repeat;}
-#testimonial_window2 {top: 50%; left: 55%; background-image: url("../src/desktop_items/quotes2.svg"); background-size: 90% 75%; background-position: 5% 50%; background-repeat: no-repeat;}
-#testimonial_window3 {top: 55%; left: 60%; background-image: url("../src/desktop_items/quotes3.svg"); background-size: 100% 75%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window1 {bottom: 35%; left: 50%; background-image: url("../src/desktop_items/quotes1.svg"); background-size: 100% 75%; background-position: 0% 60%; background-repeat: no-repeat;}
+#testimonial_window2 {bottom: 25%; left: 55%; background-image: url("../src/desktop_items/quotes2.svg"); background-size: 90% 75%; background-position: 5% 50%; background-repeat: no-repeat;}
+#testimonial_window3 {bottom: 15%; left: 60%; background-image: url("../src/desktop_items/quotes3.svg"); background-size: 100% 75%; background-position: 0% 60%; background-repeat: no-repeat;}
 .sticky h5{padding-left: 30px; padding-right: 30px;  padding-top: 10%; } 
 #sticky_button {background: #3A4172; color: white; }
 #sticky_button button:hover {background:white; color: #3A4172;}
-
-.case {width: 90%; max-width: 1100px; height: 75%; background-image: url('../src/desktop_items/grid_simple.svg'); background-color: #ececec; background-size: contain; overflow: auto;}
-
-
+.sticky {width: 300px; height: 300px; background: #9aa4bd; position: fixed;  z-index: 20; text-align: center;  }
 
 .artboard{height: 100%; padding: 50px;   }
-.blu {border-left: 10px solid #3a4172; padding-left: 20px; margin-right: 20px;}
+.case {width: 90%; max-width: 1100px; height: 75%; background-image: url('../src/desktop_items/grid_simple.svg'); background-color: #ececec; background-size: contain; overflow: auto;}
+
 .artboard h2 {font-size: 24px; font-style: italic; line-height: 30px; opacity: 0.5; font-weight: 100; margin-right: 50px;}
 .artboard h1 {font-size: 2.5rem; line-height: 10px; }
 .artboard_date {font-style: italic; font-size: 20px;}
@@ -271,6 +251,25 @@ button:hover {cursor: pointer;}
 
 .artboard_column {float: left; width: 100%; }
 .artboard_columnthird, .artboard_columntwothird {float: left; right: 0; width: 100%;}
+
+
+@media screen and (min-width: 1200px ) {
+  .artboard_columnthird{ width: 30%; margin-right: 2%; }
+  .artboard_columntwothird {right: 0; width: 66%;} 
+  
+  
+
+}
+
+@media screen and (min-width: 1000px) {
+  .artboard_response_row {display: -ms-flexbox; /* IE10 */ display: flex; -ms-flex-wrap: wrap; /* IE10 */ flex-wrap: wrap; padding: 0 4px;}
+  .artboard_response_column {-ms-flex: 50%; /* IE10 */ flex: 50%; max-width: 50%; padding-right: 1%}
+  .artboard_response_column img {margin: 2% 2% 0% 0%; vertical-align: middle; width: 100%;}
+  
+  #vans_hide {display: block;}
+   
+}
+
 
 
 @media screen and (min-width: 1200px ) {
