--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ font-display:swap;font-style:normal;font-weight:400;
 
 body {
 	overflow-x: hidden;
-    overflow-y: scroll;
+  overflow-y: scroll;
 	padding: 0;
 	margin: 0;
 	font-family: 'Poppins', sans-serif, normal; 
@@ -22,6 +22,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-display: swap; 
+  background: #2E345B;
 	
 }
 /* 
@@ -47,7 +48,7 @@ p {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; line-height: 1.2
 em {font-family: 'Poppins', sans-serif, italic;}
 b {font-family: 'Poppins', sans-serif, 400;}
 a {color: white; text-decoration: none;}
-a:hover {color: #9aa4bd;}
+a:hover {color: #ececec; cursor: pointer;}
 
 
 #viewport {width: 100%; height: 100%; position: fixed;}
@@ -111,11 +112,6 @@ a:hover {color: #9aa4bd;}
 .desktop_toolbar_left {opacity: 0;}
 .toolbar_hide, .toolbar_design_elixir {font-family: 'Poppins', sans-serif, normal; font-size: 1rem; line-height: 3rem; padding-right: 10px;}
 
-.dock_container {position: fixed; bottom: 0;  z-index: 100; } 
-.dock {bottom: 0; height: 100px; background-color: #2e345b; display: flex; justify-content: center; align-items: center; z-index: 200;}
-.dock img {height: 100px; padding: 15px; opacity: 1;}
-.dock img:hover {transform: rotate(5deg);}
-
 .tooltip {position: relative; display: inline-block;}
 .tooltip .tooltiptext {
   visibility: hidden;
@@ -140,11 +136,11 @@ a:hover {color: #9aa4bd;}
 button {background: none; border: none; outline: none;}
 button:hover {cursor: pointer;}
 
-.desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-color: #47578a; }
-#desktop_window_wrapper {width: 100%;  height: calc(100% - 190px); position: fixed; z-index: 0; contain: content; top: 70px;  display: flex; justify-content: center; align-items: center; content: contain; }
+.desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-size: cover; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B; z-index: 0;}
+#desktop_window_wrapper {width: 100%; height: calc(100% - 190px); position: fixed; z-index: 0; contain: content; top: 70px;  display: flex; justify-content: center; align-items: center; content: contain; }
 .desktop button {background: none; border: none; outline: none;}
 
-.desktop_toolbar {width: 100%; background-color: #2c2c2c; display: inline-block; height: 50px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; }
+.desktop_toolbar {width: 100%; background-color: #2c2c2c; display: inline-block; height: 50px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; z-index: 20; }
 #desktop_toolbar_left { float: left; width: 95%; padding-left: 20px; }
 #desktop_toolbar_right {width: 175px; float: right;  }
 #desktop_toolbar_right img {height: 30%; padding-right: 5px; }
@@ -160,17 +156,24 @@ button:hover {cursor: pointer;}
 .tooltip .tooltiptext::after {content: " "; position: absolute; top: 100%; left: 50%; margin-left: -10px; border: 7px solid; border-width: 9px; border-style: solid; border-color: #c7ccde transparent transparent transparent;}
 .tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
 
-.desktop_icon_container {right: 10px; position: fixed; top: 150px; max-width: 110px; }
-.desktop_icon_container img {width: 100%; max-height: 110px; min-width: 110px;  padding-bottom: 10%; }
+.desktop_icon_container {position: fixed; content: contain; width: 100%; height: 100%; z-index: 5;}
+.desktop_icon_container img {width: 100px; padding-bottom: 10%;  }
+.desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
+.desktop_icons {position: fixed;}
 .desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
 
-#notification {right: 0px; z-index: 20; width: 500px; position: fixed; top: 50px; display: none; animation: slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;}     
+.star_wallpaper {height: calc(100% - 50px); bottom: 0; margin: auto; position: fixed; z-index: 0; }
+#wallpaper1 {animation: fadeInFromNone 4s ease-out infinite both;}
+#wallpaper2 {animation: fadeInFromNone 10s ease-out infinite both; animation-delay: 5s;}
+#wallpaper3 {animation: fadeInFromNone 8s ease-out infinite both; animation-delay: 10s}
+
+#notification {right: 0px; z-index: 20; width: 500px; position: fixed; top: 50px; display: none; -webkit-animation:slide-in-right 15s cubic-bezier(.25,.46,.45,.94) both; animation:slide-in-right .5s cubic-bezier(.25,.46,.45,.94) both !important}     
 #notification:hover {cursor: pointer;}
 
-.window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; height: 100%; background: #c6cadf;  box-shadow: 5px 5px 5px #2c2c2c; position: fixed; contain: content;}
+.window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; height: 100%; background: #c6cadf;  box-shadow: 5px 5px 5px #2c2c2c; position: fixed; contain: content; z-index: 10;}
 .window_closebar {height: 30px; width: 100%; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; border-bottom: #3A4172 1px solid; text-align: center; position: sticky; z-index: 20;}
 .window_closebar p {display: inline-block; position: relative; bottom: 9px; color: #c6cadf;}
-.close_btn {top: 5px; height: 20px; left: 8px; float: left; position: fixed; }
+.close_btn {top: 5px; height: 20px; left: 8px; float: left; position: fixed; } 
 .window_closebar img:hover {cursor: pointer; transform: scale(1.2)}
 
 
@@ -181,7 +184,8 @@ button:hover {cursor: pointer;}
 #about_content {height: 95%; margin-top: 2.5%; display: flex; scroll-behavior: smooth; flex-wrap: nowrap; overflow-x: auto; width: 100%;}
 .slide {left: 0; padding: 50px 50px 0px 50px; flex: 0 0 auto;  display: inline-block; height: 100%; width: 100%; margin-right: 20px;  max-width: 610px; contain: content; }
 #about_content::-webkit-scrollbar {display: none;}
-.about_nav {width: 85%; height: 20px; bottom: 2%; position: fixed; display: flex; justify-content: center; align-items: center;  contain: content;}
+.about_copy {height: calc(100% - 60px); contain: content; overflow-y: scroll; }
+.about_nav {width: 85%; height: 60px; bottom: 0; position: fixed; display: flex; justify-content: center; align-items: center;  contain: content; background: #ececec;}
 #about_window h1 {font-size: 24px; }
 
 .about_nav h6 {text-transform: uppercase; font-size: 12px; font-weight: 400; color: gray;}
@@ -202,16 +206,19 @@ button:hover {cursor: pointer;}
 #terminal_text p {display: none; font-family:'Courier New', Courier, monospace; color: white; padding-left: 2%;}
 .line {white-space: nowrap; overflow: hidden; transform: translateY(-50%); animation: typing 2.5s steps(30, end); display: block !important;}
 
-#finder_window {max-height: 80%; max-width: 80%;}
+#finder_window {max-height: 98%; width: 80%; max-width: 1200px;}
 #finder_window .window_closebar {border-bottom: none;}
 #finder_filter {box-shadow: 0px 5px 5px gray; width: 100%; height: 35px; background: #4c5987; border-bottom: 1px solid #2f335c; display: flex; justify-content: center; align-items: center;}
 #finder_filter button {background:#384272; border: none; border-right: 1px solid #2c2c2c;  color: #c7ccde;  padding: 5px 20px;}
 #finder_filter button:focus {background: #2f335c; color: white;}
 .slide_container {contain: content; content: contain; height: calc(100% - 250px); margin: 50px;}
-.slide_container img {width: 100%; animation: fade-in .75s cubic-bezier(.39,.575,.565,1.000) both;}
+.slide_container img {height: 100%;  animation: fade-in .75s cubic-bezier(.39,.575,.565,1.000) both; box-shadow: 5px 5px 5px gray;}
+.slide_image {height: 80%; display: flex; justify-content: center; align-items: center; }
+
 .finder_carousel{background: #707BA5; box-shadow: 0px -4px 7px gray; border-top: 1px solid #2f335c; width: 100%; height: 100px; position: absolute; bottom: 0; display: flex;  align-items: center; overflow-y: hidden; overflow-x: scroll;}
 .finder_carousel img {height: 80px; border: 1px solid #2f335c; box-shadow: 2px 2px 2px black; background: none; }
 .finder_carousel button {padding: 20px; outline: none; border: none; cursor: pointer; }
+
 /* .active_carousel_button {transform: scale(1.3);}   */
 .slideshow_btn_left {position: fixed; left: 0; bottom: 50%; height: 105px; z-index: 20; font-size: 72px; cursor: pointer;}
 .slideshow_btn_right {position: fixed; right: 0; bottom: 50%; height: 105px; font-size: 72px; cursor: pointer;}
@@ -229,10 +236,11 @@ button:hover {cursor: pointer;}
 .sticky h5{padding-left: 30px; padding-right: 30px;  padding-top: 10%; } 
 #sticky_button {background: #3A4172; color: white; }
 #sticky_button button:hover {background:white; color: #3A4172;}
-.sticky {width: 300px; height: 300px; background: #9aa4bd; position: fixed;  z-index: 20; text-align: center;  }
+.sticky {width: 300px; height: 300px; background: #9aa4bd; position: fixed; z-index: 20; text-align: center;  }
+#testimonial_wrapper {z-index: 20;}
 
-.artboard{height: 100%; padding: 50px;   }
-.case {width: 90%; max-width: 1100px; height: 75%; background-image: url('../src/desktop_items/grid_simple.svg'); background-color: #ececec; background-size: contain; overflow: auto;}
+.artboard{height: 100%; padding: 50px;}
+.case {width: 90%; max-width: 1100px; height: 98%; background-image: url('../src/desktop_items/grid_simple.svg'); background-color: #ececec; background-size: contain; overflow: auto;}
 
 .artboard h2 {font-size: 24px; font-style: italic; line-height: 30px; opacity: 0.5; font-weight: 100; margin-right: 50px;}
 .artboard h1 {font-size: 2.5rem; line-height: 10px; }
@@ -243,9 +251,9 @@ button:hover {cursor: pointer;}
 .caption {font-style: italic; opacity: 0.75; margin-left: 1%;}
 .artboard_bottom {margin-top: 100px; margin-bottom: 50px;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
-.artboard_button {width: 50%; background: #2f335c; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
-.artboard_button {color: white; text-decoration: none; font-family: 'Poppins', sans-serif;}
-.artboard_button:hover {background-color: #384272; cursor: pointer;}
+.artboard_button {width: 50%; background: #2f335c !important; border: none; padding: 15px; margin-top: 7%; margin-bottom: 20px;}
+.artboard_button a{color: white!important; text-decoration: none; font-family: 'Poppins', sans-serif;}
+.artboard_button:hover {background-color: #384272!important; cursor: pointer;}
 .bob_motu img {width: 50%; vertical-align: middle;}
 
 .artboard_column {float: left; width: 100%; }
@@ -310,11 +318,22 @@ button:hover {cursor: pointer;}
 
 .fade-out{-webkit-animation:fade-out .25s ease-out both;animation:fade-out .25s ease-out both}
 @-webkit-keyframes fade-out{0%{opacity:1}100%{opacity:0}}@keyframes fade-out{0%{opacity:1}100%{opacity:0}}
-.fade-in{-webkit-animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both}
-@-webkit-keyframes fade-in{0%{opacity:0}100%{opacity:1}}@keyframes fade-in{0%{opacity:0}100%{opacity:1}}
 
+.fade-in{-webkit-animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in .25s cubic-bezier(.39,.575,.565,1.000) both}
+@-webkit-keyframes fade-in{0%{opacity:0}25%{opacity:0.25}50%{opacity:0.5} 75% {opacity:0.75}100%{opacity:1}}@keyframes fade-in{0%{opacity:0}25%{opacity:0.25}50%{opacity:0.5} 75% {opacity:0.75}100%{opacity:1}}
+
+
+.fade-out2{-webkit-animation:fade-out2 .25s cubic-bezier(1.000, 0.565, 0.575, 0.39) both; animation:fade-out2 .25s cubic-bezier(1.000, 0.565, 0.575, 0.39) both}
+@-webkit-keyframes fade-out2{0%{opacity:1}25%{opacity:0.8}50%{opacity:0.6}100%{opacity:0.5}}@keyframes fade-out2{0%{opacity:1}25%{opacity:0.8}50%{opacity:0.6}100%{opacity:0.5}}
 
 /* animations  */
+
+@keyframes fadeInFromNone {
+  0%, 100% {opacity: 1;} 25%, 75% {opacity: 0.5;} 12.5%, 62.5% {opacity: 0.25;} 50% {opacity: 0.1;} 
+}
+
+.slide-in-right{-webkit-animation:slide-in-right .5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-right .5s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
 
 @keyframes rotateStars {
 	0%, 100% {
