--- a/css/index.css
+++ b/css/index.css
@@ -272,7 +272,7 @@ button {background: none; border: none; outline: none;}
 button:hover {cursor: pointer;}
 
 .desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-size: cover; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B; z-index: 0;}
-#desktop_window_wrapper {width: 100%; height: calc(100% - 190px); position: fixed; z-index: 0; contain: content; margin-top: 70px;  display: flex; justify-content: center; align-items: center; content: contain; }
+#desktop_window_wrapper {width: 100%; height: calc(100% - 190px); position: fixed; z-index: 0; contain: content; margin-top: 40px; background: green; display: flex; justify-content: center; align-items: center; content: contain; }
 .desktop button {background: none; border: none; outline: none;}
 
 .desktop_toolbar {width: 100%; background-color: #2c2c2c; display: inline-block; height: 50px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; z-index: 20; }
